src/copy-to-clipboard/styles.scss
/*
 Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
 SPDX-License-Identifier: Apache-2.0
*/

@use '../internal/styles/tokens' as awsui;

.root {
  display: contents;
}

.inline-container {
  word-break: break-all;

  &-trigger {
    white-space: nowrap;
    margin-inline-end: awsui.$space-scaled-xxs;
  }
}

